--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -21,7 +21,10 @@
     <color name="progress_color_1">#3CB371</color>
     <color name="bg">#CDB5CD</color>
 
+    <color name="mp_touming">#00000000</color>
+
     <color name="alpha">#000000</color>
+    <color name="text_title">#303030</color>
     <color name="text01">#333333</color>
     <color name="text02">#999999</color>
     <color name="text03">#998b7c</color>
@@ -30,10 +33,10 @@
     <color name="text06">#a2a2a2</color><!--列表项内容-->
     <color name="text07">#366cf4</color>
     <color name="text_lv">#9fd1f7</color>
-    <color name="xian1">#b2b2b2</color>
+    <color name="xian1">#d6d6d6</color>
     <color name="title">#fefefe</color>
     <color name="white">#FFFFFF</color>
-    <color name="bg_title">#333333</color>
+    <color name="bg_title">#ffffff</color>
     <color name="bg1">#e4e4e4</color>
     <color name="bg2">#f4f4f4</color>
 </resources>
