--- a/app/src/main/res/layout/activity_change_pay_password.xml
+++ b/app/src/main/res/layout/activity_change_pay_password.xml
@@ -17,7 +17,12 @@
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:text="修改支付密码"
-            android:textColor="@color/white"
+            android:textColor="@color/text_title"
             android:textSize="@dimen/title" />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/xian"
+            android:background="@color/xian1"
+            android:layout_alignParentBottom="true"/>
     </RelativeLayout>
 </LinearLayout>
