--- a/app/src/main/res/layout/activity_change_protect.xml
+++ b/app/src/main/res/layout/activity_change_protect.xml
@@ -1,10 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.duan.duan.DCZ_activity.ChangeProtectActivity">
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="20dp"
+        android:background="@color/bg_title"/>
     <RelativeLayout
         style="@style/Title"
         android:background="@color/bg_title">
@@ -16,7 +21,99 @@
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:text="兑换保护"
-            android:textColor="@color/white"
+            android:textColor="@color/text_title"
             android:textSize="@dimen/title" />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/xian"
+            android:background="@color/xian1"
+            android:layout_alignParentBottom="true"/>
+    </RelativeLayout>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textColor="@color/text06"
+        android:textSize="@dimen/text01"
+        android:padding="@dimen/left"
+        android:text="开启游戏保护，保护资金安全"/>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/white"
+        android:paddingBottom="10dp"
+        android:paddingLeft="@dimen/left"
+        android:paddingTop="10dp">
+
+        <ImageView
+            android:id="@+id/iv1"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_centerVertical="true"
+            android:src="@mipmap/t0r" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="10dp"
+            android:layout_toRightOf="@id/iv1"
+            android:text="钱包登录"
+            android:textColor="@color/text05"
+            android:textSize="@dimen/text01" />
+
+        <com.example.duan.duan.DCZ_selft.SwitchButton
+            android:id="@+id/button1"
+            style="@style/SwitchButtonStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:checked="true"
+            android:textColor="@color/custom_text_state_color"
+            android:textSize="16dp"
+            app:kswBackDrawable="@drawable/ios_back_drawable"
+            app:kswTextOff="Off"
+            app:kswTextOn="On"
+            app:kswTintColor="@color/text_lv" />
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="1dp"
+        android:background="@color/white"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
+        android:paddingLeft="@dimen/left">
+        <ImageView
+            android:id="@+id/iv2"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_centerVertical="true"
+            android:src="@mipmap/t0r"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_toRightOf="@id/iv2"
+            android:layout_marginLeft="10dp"
+            android:textSize="@dimen/text01"
+            android:textColor="@color/text05"
+            android:text="支付宝钱包支付"/>
+        <com.example.duan.duan.DCZ_selft.SwitchButton
+            android:id="@+id/button2"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            style="@style/SwitchButtonStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:checked="true"
+            app:kswTextOff="Off"
+            app:kswTextOn="On"
+            app:kswTintColor="@color/text_lv"
+            app:kswBackDrawable="@drawable/ios_back_drawable"
+            android:textColor="@color/custom_text_state_color"
+            android:textSize="16dp"/>
     </RelativeLayout>
 </LinearLayout>
