--- a/app/src/main/res/layout/activity_game_protect.xml
+++ b/app/src/main/res/layout/activity_game_protect.xml
@@ -4,7 +4,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:background="@color/bg2"
     tools:context="com.example.duan.duan.DCZ_activity.GameProtectActivity">
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="20dp"
+        android:background="@color/bg_title"/>
     <RelativeLayout
         style="@style/Title"
         android:background="@color/bg_title">
@@ -16,12 +22,94 @@
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:text="游戏保护"
-            android:textColor="@color/white"
+            android:textColor="@color/text_title"
             android:textSize="@dimen/title" />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/xian"
+            android:background="@color/xian1"
+            android:layout_alignParentBottom="true"/>
     </RelativeLayout>
-    <LinearLayout
+    <TextView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-    </LinearLayout>
+        android:layout_height="wrap_content"
+        android:textColor="@color/text06"
+        android:textSize="@dimen/text01"
+        android:padding="@dimen/left"
+        android:text="开启游戏保护，保护资金安全"/>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/white"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
+        android:paddingLeft="@dimen/left">
+        <ImageView
+            android:id="@+id/iv1"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_centerVertical="true"
+            android:src="@mipmap/t0r"/>
+        <TextView
+            android:layout_toRightOf="@id/iv1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:textSize="@dimen/text01"
+            android:layout_marginLeft="10dp"
+            android:textColor="@color/text05"
+            android:text="王者荣耀"/>
+        <com.example.duan.duan.DCZ_selft.SwitchButton
+            android:id="@+id/button1"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            style="@style/SwitchButtonStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:checked="true"
+            app:kswTextOff="Off"
+            app:kswTextOn="On"
+            app:kswTintColor="@color/text_lv"
+            app:kswBackDrawable="@drawable/ios_back_drawable"
+            android:textColor="@color/custom_text_state_color"
+            android:textSize="16dp"/>
+    </RelativeLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="1dp"
+        android:background="@color/white"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
+        android:paddingLeft="@dimen/left">
+        <ImageView
+            android:id="@+id/iv2"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_centerVertical="true"
+            android:src="@mipmap/t0r"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_toRightOf="@id/iv2"
+            android:layout_marginLeft="10dp"
+            android:textSize="@dimen/text01"
+            android:textColor="@color/text05"
+            android:text="阴阳师"/>
+        <com.example.duan.duan.DCZ_selft.SwitchButton
+            android:id="@+id/button2"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            style="@style/SwitchButtonStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:checked="true"
+            app:kswTextOff="Off"
+            app:kswTextOn="On"
+            app:kswTintColor="@color/text_lv"
+            app:kswBackDrawable="@drawable/ios_back_drawable"
+            android:textColor="@color/custom_text_state_color"
+            android:textSize="16dp"/>
+    </RelativeLayout>
 </LinearLayout>
