--- a/app/src/main/res/layout/activity_wallet_protect.xml
+++ b/app/src/main/res/layout/activity_wallet_protect.xml
@@ -7,6 +7,10 @@
     android:background="@color/bg1"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="com.example.duan.duan.DCZ_activity.WalletProtectActivity">
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="20dp"
+        android:background="@color/bg_title"/>
     <RelativeLayout
         style="@style/Title"
         android:background="@color/bg_title">
@@ -18,13 +22,20 @@
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:text="钱包保护"
-            android:textColor="@color/white"
+            android:textColor="@color/text_title"
             android:textSize="@dimen/title" />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/xian"
+            android:background="@color/xian1"
+            android:layout_alignParentBottom="true"/>
     </RelativeLayout>
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="20dp"
+        android:textColor="@color/text06"
+        android:textSize="@dimen/text01"
+        android:padding="@dimen/left"
         android:text="开启保护后账户才可以正常验证登录和支付，有效保护账户资金安全"/>
     <RelativeLayout
         android:layout_width="match_parent"
@@ -32,13 +43,24 @@
         android:background="@color/white"
         android:paddingTop="10dp"
         android:paddingBottom="10dp"
-        android:paddingLeft="30dp">
+        android:paddingLeft="@dimen/left">
+        <ImageView
+            android:id="@+id/iv1"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_centerVertical="true"
+            android:src="@mipmap/t0r"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
+            android:layout_toRightOf="@id/iv1"
+            android:layout_marginLeft="10dp"
+            android:textSize="@dimen/text01"
+            android:textColor="@color/text05"
             android:text="钱包登录"/>
         <com.example.duan.duan.DCZ_selft.SwitchButton
+            android:id="@+id/button1"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             style="@style/SwitchButtonStyle"
@@ -59,13 +81,24 @@
         android:background="@color/white"
         android:paddingTop="10dp"
         android:paddingBottom="10dp"
-        android:paddingLeft="30dp">
+        android:paddingLeft="@dimen/left">
+        <ImageView
+            android:id="@+id/iv2"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_centerVertical="true"
+            android:src="@mipmap/t0r"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
+            android:layout_toRightOf="@id/iv2"
+            android:layout_marginLeft="10dp"
+            android:textSize="@dimen/text01"
+            android:textColor="@color/text05"
             android:text="钱包支付"/>
         <com.example.duan.duan.DCZ_selft.SwitchButton
+            android:id="@+id/button2"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             style="@style/SwitchButtonStyle"
