--- a/app/src/main/res/layout/fragment_a.xml
+++ b/app/src/main/res/layout/fragment_a.xml
@@ -17,7 +17,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:orientation="vertical"
-        android:background="@color/text_lv"
+        android:background="#386df7"
         android:layout_weight="1">
         <RelativeLayout
             style="@style/Title"
@@ -40,10 +40,14 @@
                 android:layout_marginRight="22dp"
                 android:layout_alignParentBottom="true"/>
         </RelativeLayout>
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:padding="10dp">
+            <com.facebook.drawee.view.SimpleDraweeView
+                android:id="@+id/iv"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -54,6 +58,7 @@
                 <com.facebook.drawee.view.SimpleDraweeView
                     android:layout_width="100dp"
                     android:layout_height="100dp"
+                    android:visibility="invisible"
                     android:background="#333333"/>
                 <View
                     android:layout_width="match_parent"
@@ -69,7 +74,7 @@
                     android:layout_marginTop="3dp"
                     android:text="账户暂无安全风险"/>
             </LinearLayout>
-        </LinearLayout>
+        </RelativeLayout>
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
