--- a/app/src/main/res/layout/activity_change_pay_password.xml
+++ b/app/src/main/res/layout/activity_change_pay_password.xml
@@ -6,6 +6,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.duan.duan.DCZ_activity.ChangePayPasswordActivity">
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="20dp"
+        android:background="@color/bg_title"/>
     <RelativeLayout
         style="@style/Title"
         android:background="@color/bg_title">
