--- a/app/src/main/res/layout/fragment_a.xml
+++ b/app/src/main/res/layout/fragment_a.xml
@@ -44,8 +44,9 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:padding="10dp">
-            <com.facebook.drawee.view.SimpleDraweeView
+            <ImageView
                 android:id="@+id/iv"
+                android:background="@drawable/progress_sao"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"/>
             <LinearLayout
@@ -53,7 +54,6 @@
                 android:layout_height="match_parent"
                 android:gravity="center_horizontal"
                 android:paddingTop="20dp"
-                android:paddingBottom="20dp"
                 android:orientation="vertical">
                 <com.facebook.drawee.view.SimpleDraweeView
                     android:layout_width="100dp"
@@ -62,15 +62,17 @@
                     android:background="#333333"/>
                 <View
                     android:layout_width="match_parent"
-                    android:layout_height="10dp">
+                    android:layout_height="30dp">
                 </View>
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:textColor="@color/white"
                     android:text="ru****hua@qq.com"/>
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:textColor="@color/white"
                     android:layout_marginTop="3dp"
                     android:text="账户暂无安全风险"/>
             </LinearLayout>
