--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,10 +8,10 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="20dp"
-        android:background="@color/bg_title"/>
+        android:background="@color/text07"/>
     <RelativeLayout
         style="@style/Title"
-        android:background="@color/bg_title">
+        android:background="@color/text07">
         <include
             android:id="@+id/back"
             layout="@layout/layout_back" />
@@ -19,8 +19,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:text="登录"
-            android:textColor="@color/text_title"
+            android:text="账号登录"
+            android:textColor="@color/white"
             android:textSize="@dimen/title" />
         <TextView
             android:layout_width="match_parent"
@@ -28,13 +28,6 @@
             android:background="@color/xian1"
             android:layout_alignParentBottom="true"/>
     </RelativeLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:orientation="vertical"
-        android:layout_weight="1">
-
-    </LinearLayout>
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -42,9 +35,83 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="10dp"
+            android:padding="40dp"
             android:text="找回密码"
+            android:textColor="@color/text07"
+            android:textSize="@dimen/text02"
             android:layout_centerHorizontal="true"
             android:layout_alignParentBottom="true"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_marginLeft="@dimen/left"
+            android:layout_marginRight="20dp">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="15dp">
+                <ImageView
+                    android:layout_width="35dp"
+                    android:layout_height="35dp"
+                    android:layout_marginLeft="10dp"
+                    android:src="@mipmap/ic_launcher"/>
+                <EditText
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:hint="请输入账号"
+                    android:textSize="@dimen/text01"
+                    android:singleLine="true"
+                    android:layout_marginLeft="10dp"
+                    android:textColorHint="@color/text06"
+                    android:background="@null"
+                    android:textCursorDrawable="@null"
+                    android:textColor="@color/text05"/>
+            </LinearLayout>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/xian"
+                android:background="@color/xian1"
+                android:layout_marginTop="15dp"/>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="15dp">
+                <ImageView
+                    android:layout_width="35dp"
+                    android:layout_height="35dp"
+                    android:layout_marginLeft="10dp"
+                    android:src="@mipmap/ic_launcher"/>
+                <EditText
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:hint="请输入登录密码"
+                    android:textSize="@dimen/text01"
+                    android:inputType="number"
+                    android:singleLine="true"
+                    android:layout_marginLeft="10dp"
+                    android:textColorHint="@color/text06"
+                    android:background="@null"
+                    android:textCursorDrawable="@null"
+                    android:textColor="@color/text05"/>
+            </LinearLayout>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/xian"
+                android:background="@color/xian1"
+                android:layout_marginTop="15dp"/>
+            <TextView
+                android:id="@+id/button"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="下一步"
+                android:layout_marginTop="15dp"
+                android:background="@drawable/yuanjiaolan"
+                android:gravity="center"
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp"
+                android:textSize="@dimen/title"
+                android:textColor="@color/white"/>
+        </LinearLayout>
     </RelativeLayout>
 </LinearLayout>
