--- a/app/src/main/res/layout/fragment_c.xml
+++ b/app/src/main/res/layout/fragment_c.xml
@@ -41,6 +41,7 @@
                     android:layout_height="match_parent"
                     android:paddingLeft="20dp">
                     <LinearLayout
+                        android:id="@+id/ll1"
                         android:layout_width="0dp"
                         android:orientation="vertical"
                         android:layout_height="match_parent"
