--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.example.duan.duan.DCZ_activity.LoginActivity">
+    tools:context="com.example.duan.duan.DCZ_activity.ChangePasswordActivity">
     <TextView
         android:layout_width="match_parent"
         android:layout_height="20dp"
@@ -19,7 +19,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:text="账号登录"
+            android:text="找回密码"
             android:textColor="@color/white"
             android:textSize="@dimen/title" />
         <TextView
@@ -32,15 +32,6 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="40dp"
-            android:text="找回密码"
-            android:textColor="@color/text07"
-            android:textSize="@dimen/text02"
-            android:layout_centerHorizontal="true"
-            android:layout_alignParentBottom="true"/>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -57,37 +48,11 @@
                     android:layout_marginLeft="10dp"
                     android:src="@mipmap/ic_launcher"/>
                 <EditText
-                    android:layout_width="match_parent"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
                     android:layout_height="match_parent"
-                    android:hint="请输入账号"
+                    android:hint="请输入要重置的密码账户"
                     android:textSize="@dimen/text01"
-                    android:singleLine="true"
-                    android:layout_marginLeft="10dp"
-                    android:textColorHint="@color/text06"
-                    android:background="@null"
-                    android:textCursorDrawable="@null"
-                    android:textColor="@color/text05"/>
-            </LinearLayout>
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/xian"
-                android:background="@color/xian1"
-                android:layout_marginTop="15dp"/>
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="15dp">
-                <ImageView
-                    android:layout_width="35dp"
-                    android:layout_height="35dp"
-                    android:layout_marginLeft="10dp"
-                    android:src="@mipmap/ic_launcher"/>
-                <EditText
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:hint="请输入登录密码"
-                    android:textSize="@dimen/text01"
-                    android:inputType="number"
                     android:singleLine="true"
                     android:layout_marginLeft="10dp"
                     android:textColorHint="@color/text06"
