--- a/app/src/main/res/layout/fragment_b.xml
+++ b/app/src/main/res/layout/fragment_b.xml
@@ -49,6 +49,7 @@
                     android:layout_height="0dp"
                     android:layout_weight="1">
                     <TextView
+                        android:id="@+id/number1"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:background="@drawable/yuanjiaobai"
@@ -60,6 +61,7 @@
                         android:textStyle="bold"
                         android:gravity="center"/>
                     <TextView
+                        android:id="@+id/number2"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:background="@drawable/yuanjiaobai"
@@ -72,6 +74,7 @@
                         android:textStyle="bold"
                         android:gravity="center"/>
                     <TextView
+                        android:id="@+id/number3"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:background="@drawable/yuanjiaobai"
@@ -84,6 +87,7 @@
                         android:textStyle="bold"
                         android:gravity="center"/>
                     <TextView
+                        android:id="@+id/number4"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:background="@drawable/yuanjiaobai"
@@ -96,6 +100,7 @@
                         android:textStyle="bold"
                         android:gravity="center"/>
                     <TextView
+                        android:id="@+id/number5"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:background="@drawable/yuanjiaobai"
@@ -108,6 +113,7 @@
                         android:textStyle="bold"
                         android:gravity="center"/>
                     <TextView
+                        android:id="@+id/number6"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:background="@drawable/yuanjiaobai"
