--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -24,7 +24,7 @@
     <color name="mp_touming">#00000000</color>
 
     <color name="alpha">#000000</color>
-    <color name="text_title">#303030</color>
+    <color name="text_title">#ffffff</color>
     <color name="text01">#333333</color>
     <color name="text02">#999999</color>
     <color name="text03">#998b7c</color>
@@ -36,7 +36,7 @@
     <color name="xian1">#d6d6d6</color>
     <color name="title">#fefefe</color>
     <color name="white">#FFFFFF</color>
-    <color name="bg_title">#ffffff</color>
+    <color name="bg_title">#366cf4</color>
     <color name="bg1">#e4e4e4</color>
     <color name="bg2">#f4f4f4</color>
 </resources>
