--- a/app/src/main/res/layout/activity_gestures_lock.xml
+++ b/app/src/main/res/layout/activity_gestures_lock.xml
@@ -4,14 +4,15 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/bg1"
     tools:context="com.example.duan.duan.DCZ_activity.GesturesLockActivity">
     <TextView
         android:layout_width="match_parent"
         android:layout_height="20dp"
-        android:background="@color/bg_title"/>
+        android:background="@color/white"/>
     <RelativeLayout
         style="@style/Title"
-        android:background="@color/bg_title">
+        android:background="@color/white">
         <include
             android:id="@+id/back"
             layout="@layout/layout_back" />
@@ -20,7 +21,7 @@
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:text="手势锁"
-            android:textColor="@color/text_title"
+            android:textColor="@color/text05"
             android:textSize="@dimen/title" />
         <TextView
             android:layout_width="match_parent"
@@ -28,4 +29,17 @@
             android:background="@color/xian1"
             android:layout_alignParentBottom="true"/>
     </RelativeLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingLeft="@dimen/left"
+        android:paddingRight="100dp"
+        android:layout_marginTop="20dp">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/text01"
+            android:textColor="@color/text06"
+            android:text="启用手势锁后，他人在使用您手机时无密码将无法打开安全账户中心"/>
+    </LinearLayout>
 </LinearLayout>
