--- a/app/src/main/res/layout/activity_gestures_lock.xml
+++ b/app/src/main/res/layout/activity_gestures_lock.xml
@@ -32,14 +32,133 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingLeft="@dimen/left"
-        android:paddingRight="100dp"
+        android:orientation="vertical"
         android:layout_marginTop="20dp">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:paddingLeft="@dimen/left"
+            android:paddingRight="100dp"
             android:textSize="@dimen/text01"
             android:textColor="@color/text06"
             android:text="启用手势锁后，他人在使用您手机时无密码将无法打开安全账户中心"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center_horizontal">
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:layout_marginTop="50dp"
+                android:orientation="vertical">
+                <TextView
+                    android:id="@+id/tvWarn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="绘制解锁图案"
+                    android:textSize="@dimen/text01"
+                    android:textColor="@color/text05"/>
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp"
+                    android:orientation="vertical">
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="5dp"
+                        android:orientation="horizontal">
+
+                        <ImageView
+                            android:id="@+id/iva"
+                            android:layout_width="10dp"
+                            android:layout_height="10dp"
+                            android:layout_marginRight="5dp"
+                            android:background="@mipmap/unselected" />
+
+                        <ImageView
+                            android:id="@+id/ivb"
+                            android:layout_width="10dp"
+                            android:layout_height="10dp"
+                            android:layout_marginRight="5dp"
+                            android:background="@mipmap/unselected" />
+
+                        <ImageView
+                            android:id="@+id/ivc"
+                            android:layout_width="10dp"
+                            android:layout_height="10dp"
+                            android:background="@mipmap/unselected" />
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="5dp"
+                        android:orientation="horizontal">
+
+                        <ImageView
+                            android:id="@+id/ivd"
+                            android:layout_width="10dp"
+                            android:layout_height="10dp"
+                            android:layout_marginRight="5dp"
+                            android:background="@mipmap/unselected" />
+
+                        <ImageView
+                            android:id="@+id/ive"
+                            android:layout_width="10dp"
+                            android:layout_height="10dp"
+                            android:layout_marginRight="5dp"
+                            android:background="@mipmap/unselected" />
+
+                        <ImageView
+                            android:id="@+id/ivf"
+                            android:layout_width="10dp"
+                            android:layout_height="10dp"
+                            android:background="@mipmap/unselected" />
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="5dp"
+                        android:orientation="horizontal">
+
+                        <ImageView
+                            android:id="@+id/ivg"
+                            android:layout_width="10dp"
+                            android:layout_height="10dp"
+                            android:layout_marginRight="5dp"
+                            android:background="@mipmap/unselected" />
+
+                        <ImageView
+                            android:id="@+id/ivh"
+                            android:layout_width="10dp"
+                            android:layout_height="10dp"
+                            android:layout_marginRight="5dp"
+                            android:background="@mipmap/unselected" />
+
+                        <ImageView
+                            android:id="@+id/ivi"
+                            android:layout_width="10dp"
+                            android:layout_height="10dp"
+                            android:background="@mipmap/unselected" />
+
+                    </LinearLayout>
+
+                </LinearLayout>
+
+                <com.example.duan.duan.DCZ_lockdemo.CustomLockView
+                    android:id="@+id/cl"
+                    android:layout_width="200dp"
+                    android:layout_height="200dp"
+                    android:layout_marginTop="80dp" />
+
+            </LinearLayout>
+        </LinearLayout>
+
     </LinearLayout>
 </LinearLayout>
