--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -1,17 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.duan.duan.DCZ_activity.FaceCollectActivity">
+    tools:context="com.example.duan.duan.DCZ_activity.SettingActivity">
     <TextView
         android:layout_width="match_parent"
         android:layout_height="20dp"
-        android:background="@color/white"/>
+        android:background="@color/bg_title"/>
     <RelativeLayout
         style="@style/Title"
-        android:background="@color/white">
+        android:background="@color/bg_title">
         <include
             android:id="@+id/back"
             layout="@layout/layout_back" />
@@ -19,8 +20,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:text="人脸采集"
-            android:textColor="@color/text05"
+            android:text="设置"
+            android:textColor="@color/text_title"
             android:textSize="@dimen/title" />
         <TextView
             android:layout_width="match_parent"
@@ -28,9 +29,4 @@
             android:background="@color/xian1"
             android:layout_alignParentBottom="true"/>
     </RelativeLayout>
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/xian"
-        android:background="@color/xian1"
-        android:layout_alignParentBottom="true"/>
 </LinearLayout>
